--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,66 @@
-absl-py==2.2.2
-astunparse==1.6.3
-backcall==0.2.0
-cfgv==3.4.0
-click==8.1.8
-distlib==0.3.9
-docopt==0.6.2
-filelock==3.13.1
-flatbuffers==25.2.10
-fsspec==2024.6.1
-gast==0.6.0
-google-pasta==0.2.0
-grpcio==1.71.0
-h5py==3.13.0
-identify==2.6.10
-ipython==8.12.3
-ipywidgets==8.1.6
-jupyterlab_widgets==3.0.14
-keras==3.9.2
-libclang==18.1.1
-Markdown==3.8
-markdown-it-py==3.0.0
-matplotlib==3.10.0
-mccabe==0.7.0
-mdurl==0.1.2
-mkl-service==2.4.0
-ml_dtypes==0.5.1
-mpmath==1.3.0
-mypy_extensions==1.1.0
-namex==0.0.9
-networkx==3.3
-nodeenv==1.9.1
-numpy==2.1.3
-opt_einsum==3.4.0
-optree==0.15.0
-pathspec==0.12.1
-pickleshare==0.7.5
-pipreqs==0.5.0
-protobuf==5.29.4
-pycodestyle==2.13.0
-pyflakes==3.3.2
-PyQt6==6.7.1
-pywin32==308
-rich==14.0.0
-seaborn==0.13.2
-sympy==1.13.3
-tensorboard==2.19.0
-tensorboard-data-server==0.7.2
-tensorflow==2.19.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==3.0.1
-torch==2.7.0+cu118
-torchaudio==2.7.0+cu118
-torchvision==0.22.0+cu118
-virtualenv==20.30.0
-webencodings==0.5.1
-Werkzeug==3.1.3
-widgetsnbextension==4.0.14
-wrapt==1.17.2
-xgboost==3.0.0
-yarg==0.1.9
+absl-py==2.2.2 
+astunparse==1.6.3 
+backcall==0.2.0 
+cfgv==3.4.0 
+click==8.1.8 
+distlib==0.3.9 
+docopt==0.6.2 
+filelock==3.13.1 
+flatbuffers==25.2.10 
+fsspec==2024.6.1 
+gast==0.6.0 
+google-pasta==0.2.0 
+grpcio==1.71.0 
+h5py==3.13.0 
+identify==2.6.10 
+iniconfig==2.1.0 
+ipython==8.12.3 
+ipywidgets==8.1.6 
+jupyterlab_widgets==3.0.14 
+keras==3.9.2 
+libclang==18.1.1 
+Markdown==3.8 
+markdown-it-py==3.0.0 
+matplotlib==3.10.0 
+mccabe==0.7.0 
+mdurl==0.1.2 
+mkl-service==2.4.0 
+ml_dtypes==0.5.1 
+mpmath==1.3.0 
+mypy_extensions==1.1.0 
+namex==0.0.9 
+networkx==3.3 
+nodeenv==1.9.1 
+numpy==2.1.3 
+opt_einsum==3.4.0 
+optree==0.15.0 
+pathspec==0.12.1 
+pickleshare==0.7.5 
+pipreqs==0.5.0 
+pluggy==1.5.0 
+protobuf==5.29.4 
+pycodestyle==2.13.0 
+pyflakes==3.3.2 
+PyQt6==6.7.1 
+pytest==8.3.5 
+pywin32==308 
+rich==14.0.0 
+seaborn==0.13.2 
+sympy==1.13.3 
+tensorboard==2.19.0 
+tensorboard-data-server==0.7.2 
+tensorflow==2.19.0 
+tensorflow-io-gcs-filesystem==0.31.0 
+termcolor==3.0.1 
+torch==2.7.0+cu118 
+torchaudio==2.7.0+cu118 
+torchvision==0.22.0+cu118 
+tqdm==4.67.1 
+virtualenv==20.30.0 
+webencodings==0.5.1 
+Werkzeug==3.1.3 
+widgetsnbextension==4.0.14 
+wrapt==1.17.2 
+xgboost==3.0.0 
+yarg==0.1.9 
 -e .
