--- a/.env_setup.txt
+++ b/.env_setup.txt
@@ -1,6 +1,6 @@
-conda create -n bmo_ds python=3.10 -y
+conda create -n venv python=3.10 -y
 
-conda activate bmo_ds
+conda activate venv
 
 python -V
 
